page.html modified and new files added

--- a/public/page.html
+++ b/public/page.html
@@ -62,7 +62,7 @@
       <h1>Process Overview</h1>
       <div class="paragraph__timeline">
         <div class="paragraph__timeline__container">
-          <div id="cid0" class="paragraph__timeline__entry --entry-1 --is-pending">
+          <div id="cid0" class="paragraph__timeline__entry --entry-1 --is-completed">
             <span></span>
             <div class="paragraph__timeline__content-container">
               <div class="paragraph__timeline__content">
@@ -76,7 +76,7 @@
               </div>
             </div>
           </div>
-          <div id="cid1" class="paragraph__timeline__entry --entry-1 --is-pending">
+          <div id="cid1" class="paragraph__timeline__entry --entry-1 --is-inprogress">
             <span></span>
             <div class="paragraph__timeline__content-container">
               <div class="paragraph__timeline__content">
