--- a/public/pageone.html
+++ b/public/pageone.html
@@ -14,14 +14,12 @@
 <body class="loader">
   <!-- Header Section -->
   <header>
-    <div class="container-fluid">
       <div class="row" style="background-color: #007bff;">
-        <div class="col-12">
+        <div class="col s12">
           &nbsp;
-          <h2 class="text-center" style="color: white;">Alyce : An A.I fine tuned screenplay Writer</h2>
+          <h2 class="center-text text-white">Alyce : An A.I fine tuned screenplay Writer</h2>
         </div>
       </div>
-    </div>
   </header>
 
   <!-- Content Input Section -->
