--- a/public/pageone.html
+++ b/public/pageone.html
@@ -212,7 +212,7 @@
       rewrite_element_1.innerHTML = "";
       var rewrite_element_content = "";
       for (i = story_list[plot_no][3].length - 1; i >= 0; --i) {
-        rewrite_element_content = rewrite_element_content + "<br/><input type=\"radio\" value=\"" + i +
+        rewrite_element_content = rewrite_element_content + "<br/><input type=\"radio\" style=\"opacity: 1 !important;\" value=\"" + i +
           "\" onclick=\"set_as_plot(" + plot_no + "," + i + ")\" /> &emsp;&emsp; : " + story_list[plot_no][3][i];
       }
       rewrite_element_2.innerHTML = rewrite_element_content;
@@ -410,7 +410,7 @@
           current_data_server = 0;
           if (rewrite_flag == true) {
             story_list[data.output[0][0]][3].push(data.output[0][1]);
-            rewrite_element_1.innerHTML = "<br/><input type=\"radio\" style=\"opactity: 1;\" value=\"" + (story_list[data.output[0][0]][3].length -
+            rewrite_element_1.innerHTML = "<br/><input type=\"radio\" style=\"opacity: 1 !important;\" value=\"" + (story_list[data.output[0][0]][3].length -
               1) + "\" onclick=\"set_as_plot(" + data.output[0][0] + "," + (story_list[data.output[0][0]][3]
               .length -
               1) + ")\" /> &emsp;&emsp; : " + data.output[0][1];
