PageOne.html Modified

--- a/public/pageone.html
+++ b/public/pageone.html
@@ -210,12 +210,12 @@
         "<input type=\"button\" value=\"Write New Plot\" onclick=\"rewrite_plot(" + plot_no +
         ")\" /><input type=\"button\" value=\"close\" onclick=\"write_screenplay()\"/>";
       rewrite_element_1.innerHTML = "";
-      var rewrite_element_content = "";
+      var rewrite_element_content = "<form>";
       for (i = story_list[plot_no][3].length - 1; i >= 0; --i) {
         rewrite_element_content = rewrite_element_content + "<br/><input type=\"radio\" style=\"opacity: 1 !important;\" value=\"" + i +
-          "\" onclick=\"set_as_plot(" + plot_no + "," + i + ")\" /> &emsp;&emsp; : " + story_list[plot_no][3][i];
+          "\"  class=\"with-gap\" name=\"plotno\"  onclick=\"set_as_plot(" + plot_no + "," + i + ")\" /> &emsp;&emsp; : " + story_list[plot_no][3][i];
       }
-      rewrite_element_2.innerHTML = rewrite_element_content;
+      rewrite_element_2.innerHTML = rewrite_element_content+"</form>";
     }
 
     function write_screenplay() {
