--- a/public/pageone.html
+++ b/public/pageone.html
@@ -52,7 +52,6 @@
   <section id="outputsec">
     <div class="row">
       <div class="col-12">
-        <hr />
       </div>
     </div>
   </section>
@@ -127,6 +126,7 @@
   <!-- Rewrite Control Section -->
   <section id="rewrite_section" class="fullscreen">
     <h2>REWRITE SECTION</h2>
+    <div id="rewrite_progress"></div>
     <div id="rewrite_element_0"></div>
     <div id="rewrite_element_1"></div>
     <div id="rewrite_element_2"></div>
@@ -163,6 +163,7 @@
     var no_of_p3_servers = 0;
     var input_story = document.getElementById("input_story");
     var submit_button = document.getElementById("submit_input_story");
+    var rewrite_progress = document.getElementById("rewrite_progress");
     var rewrite_element_0 = document.getElementById("rewrite_element_0");
     var rewrite_element_1 = document.getElementById("rewrite_element_1");
     var rewrite_element_2 = document.getElementById("rewrite_element_2");
@@ -196,9 +197,9 @@
 
     function set_as_plot(plot_no, sublist_index) {
       story_list[plot_no][0] = story_list[plot_no][3][sublist_index];
-      rewrite_element_0.innerHTML = story_list[plot_no][0] + "<br/>" +
+      rewrite_element_0.innerHTML = "<b>CURRENTLY SELECTED : </b>"+story_list[plot_no][0] + "<br/>&nbsp;<br/>" +
         "<input type=\"button\" value=\"Write New Plot\" onclick=\"rewrite_plot(" + plot_no +
-        ")\" /><input type=\"button\" value=\"close\" onclick=\"write_screenplay(2)\"/>";
+        ")\" />&emsp;<input type=\"button\" value=\"close\" onclick=\"close_rewrite_plot_dashboard()\"/>";
     }
 
     function rewrite_plot(plot_no) {
@@ -217,6 +218,7 @@
       rewrite_element_0.innerHTML = "";
       rewrite_element_1.innerHTML = "";
       rewrite_element_2.innerHTML = "";
+      rewrite_progress.innerHTML = "";
       document.getElementById('rewrite_section').style.display = "none";
       document.getElementById('timeline_section').style.display = "block";
     }
@@ -224,7 +226,7 @@
     function open_rewrite_plot_dashboard(plot_no) {
       document.getElementById('rewrite_section').style.display = "block";
       document.getElementById('timeline_section').style.display = "none";
-      rewrite_element_0.innerHTML = story_list[plot_no][0] + "<br/>" +
+      rewrite_element_0.innerHTML =  "<b>CURRENTLY SELECTED : </b>"+story_list[plot_no][0] + "<br/>&nbsp;<br/>" +
         "<input type=\"button\" value=\"Write New Plot\" onclick=\"rewrite_plot(" + plot_no +
         ")\" />&emsp;<input type=\"button\" value=\"close\" onclick=\"close_rewrite_plot_dashboard()\"/>";
       rewrite_element_1.innerHTML = "";
@@ -280,6 +282,9 @@
       $("body").removeClass('loader');
 
       re_initialize_timeline();
+
+      document.getElementById("log_section").style.display = "none";
+      document.getElementById("rewrite_section").style.display = "none";
 
       initiate_socket_connection();
 
@@ -420,6 +425,9 @@
         } else if (data.phase == 2 && data.procedureNo == 1 && data.status == "STARTED") {
           current_phase = 2;
           current_data_server = 2;
+          if(rewrite_flag==true){
+            rewrite_progress.innerHTML = "Started Creating New Plot Please Wait !.....";
+          }
           logger_element.innerHTML = logger_element.innerHTML + "<br/><b>Phase 2.2 Started</b>";
         } else if (data.phase == 2 && data.procedureNo == 1 && data.status == "COMPLETED") {
           current_data_server = 0;
@@ -429,6 +437,7 @@
                 story_list[data.output[0][0]][3].length - 1) + "\" onclick=\"set_as_plot(" + data.output[0][0] +
               "," + (story_list[data.output[0][0]][3].length - 1) + ")\" /><span>" + data.output[0][1] +
               "</span></label>";
+            rewrite_progress.innerHTML = "New Plot Generated !.....";
             rewrite_flag = false;
           } else {
             timeline_label[2].classList.remove("--is-inprogress");
